missing padding-side--none fix

--- a/assets/scss/mixins/_spacing.scss
+++ b/assets/scss/mixins/_spacing.scss
@@ -100,6 +100,8 @@
 					#{$type}-#{$side}: $spacing-size;
 				}
 
+				%#{$type}-#{$side}--none { #{$type}-#{$side}: 0; }
+
 			} // sides
 
 		} // sizes
